src/objects/Interim_Delivery_Notes_Form__c.object
<CustomObject>
    <description>Holds a record for each clinical note instance for an interim delivery apt</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Interim Delivery Notes Forms</relationshipLabel>
        <relationshipName>Interim_Delivery_Notes_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Apt_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Apt Calendar</label>
        <referenceTo>Clinical_Apt_Calendar__c</referenceTo>
        <relationshipLabel>Interim Delivery Notes Forms</relationshipLabel>
        <relationshipName>Interim_Delivery_Notes_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Note_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Note Instance</label>
        <referenceTo>Clinical_Note_Instance__c</referenceTo>
        <relationshipLabel>Interim Delivery Notes Forms</relationshipLabel>
        <relationshipName>Interim_Delivery_Notes_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discussed_Hygiene__c</fullName>
        <label>Discussed Hygiene</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interim_Night_Guard_Delivered__c</fullName>
        <label>Interim Night Guard Delivered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Occlusal_Adjustment__c</fullName>
        <label>Occlusal Adjustment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewed_Soft_Diet__c</fullName>
        <label>Reviewed Soft Diet</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Interim Delivery Notes Form</label>
    <nameField>
        <displayFormat>IDFN-{0000}</displayFormat>
        <label>Interim Delivery Notes Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interim Delivery Notes Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>